--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -122,6 +122,13 @@
 
         </androidx.cardview.widget.CardView>
 
+        <com.like.LikeButton
+            app:icon_type="heart"
+            app:icon_size="25dp"
+            android:id="@+id/star_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <!--WebView
             android:layout_width="70dp"
             android:layout_height="70dp"
