--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -75,9 +75,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_5dp"
+                android:layout_margin="3dp"
                 android:orientation="horizontal"
-                android:background="@drawable/layout_border"
                 android:gravity="center_horizontal">
 
                 <!--de.hdodenhof.circleimageview.CircleImageView
@@ -87,101 +86,129 @@
                     android:src="@drawable/user1"
                     app:civ_border_color="#FFF"
                     app:civ_border_width="2dp" /-->
-
-                <LinearLayout
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal">
+                    android:layout_height="match_parent"
+                    android:backgroundTint="@color/colorBlank">
 
-                    <com.like.LikeButton
-                        app:icon_type="heart"
-                        app:icon_size="25dp"
-                        android:id="@+id/star_button"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        app:circle_start_color="@color/colorBlank"
-                        app:like_drawable="@drawable/like_filled"
-                        app:unlike_drawable="@drawable/like_unfilled"
-                        app:anim_scale_factor="1.5"/>
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/card_view2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/colorDarkGrayCardBackground"
+                        android:background="@drawable/layout_border"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginBottom="2dp"
+                        android:layout_marginStart="2dp"
+                        android:layout_marginEnd="2dp"
+                        app:cardCornerRadius="2dp">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/margin_5dp"
+                            android:orientation="horizontal"
+                            android:gravity="center_horizontal">
 
-                    <TextView
-                        android:id="@+id/likes_number"
-                        style="@style/TextAppearance.AppCompat.Title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_margin="@dimen/margin_5dp"
-                        android:text="120"
-                        android:textColor="@color/colorBlack"
-                        android:textStyle="bold"
-                        android:textSize="14dp"/>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:layout_marginStart="1dp"
+                                android:layout_marginEnd="1dp"
+                                android:gravity="center_horizontal">
 
-                </LinearLayout>
+                                <com.like.LikeButton
+                                    app:icon_type="heart"
+                                    app:icon_size="25dp"
+                                    android:id="@+id/star_button"
+                                    android:layout_width="25dp"
+                                    android:layout_height="25dp"
+                                    android:layout_marginTop="1dp"
+                                    android:layout_marginBottom="1dp"
+                                    app:circle_start_color="@color/colorBlank"
+                                    app:like_drawable="@drawable/like_filled"
+                                    app:unlike_drawable="@drawable/like_unfilled"
+                                    app:anim_scale_factor="1.5"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/layout_border"
-                    android:gravity="center_horizontal">
+                                <TextView
+                                    android:id="@+id/likes_number"
+                                    style="@style/TextAppearance.AppCompat.Title"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_margin="@dimen/margin_5dp"
+                                    android:text="120"
+                                    android:textColor="@color/colorBlack"
+                                    android:textStyle="bold"
+                                    android:textSize="14dp"/>
 
-                    <com.like.LikeButton
-                        app:icon_type="heart"
-                        app:icon_size="25dp"
-                        android:id="@+id/star_button1"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        app:circle_start_color="@color/colorBlank"
-                        app:like_drawable="@drawable/like_filled"
-                        app:unlike_drawable="@drawable/like_unfilled"
-                        app:anim_scale_factor="1.5"/>
+                            </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/likes_number1"
-                        style="@style/TextAppearance.AppCompat.Title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_margin="@dimen/margin_5dp"
-                        android:text="120"
-                        android:textColor="@color/colorBlack"
-                        android:textStyle="bold"
-                        android:textSize="14dp"/>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:layout_marginStart="1dp"
+                                android:layout_marginEnd="1dp"
+                                android:gravity="center_horizontal">
 
-                </LinearLayout>
+                                <ImageView
+                                    android:id="@+id/star_button1"
+                                    android:layout_width="25dp"
+                                    android:layout_height="25dp"
+                                    android:layout_marginTop="1dp"
+                                    android:layout_marginBottom="1dp"
+                                    android:src="@drawable/chat"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/layout_border"
-                    android:gravity="center_horizontal">
+                                <TextView
+                                    android:id="@+id/likes_number1"
+                                    style="@style/TextAppearance.AppCompat.Title"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_margin="@dimen/margin_5dp"
+                                    android:text="@string/see_comments"
+                                    android:textColor="@color/colorBlack"
+                                    android:textStyle="bold"
+                                    android:textSize="14dp"/>
 
-                    <com.like.LikeButton
-                        app:icon_type="heart"
-                        app:icon_size="25dp"
-                        android:id="@+id/star_button2"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        app:circle_start_color="@color/colorBlank"
-                        app:like_drawable="@drawable/like_filled"
-                        app:unlike_drawable="@drawable/like_unfilled"
-                        app:anim_scale_factor="1.5"/>
+                            </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/likes_number2"
-                        style="@style/TextAppearance.AppCompat.Title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_margin="@dimen/margin_5dp"
-                        android:text="120"
-                        android:textColor="@color/colorBlack"
-                        android:textStyle="bold"
-                        android:textSize="14dp"/>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:layout_marginStart="1dp"
+                                android:layout_marginEnd="1dp"
+                                android:gravity="center_horizontal">
 
-                </LinearLayout>
+                                <ImageView
+                                    android:id="@+id/star_button2"
+                                    android:layout_width="25dp"
+                                    android:layout_height="25dp"
+                                    android:layout_marginTop="1dp"
+                                    android:layout_marginBottom="1dp"
+                                    android:src="@drawable/share"/>
+
+                                <TextView
+                                    android:id="@+id/likes_number2"
+                                    style="@style/TextAppearance.AppCompat.Title"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_margin="@dimen/margin_5dp"
+                                    android:text="@string/share"
+                                    android:textColor="@color/colorBlack"
+                                    android:textStyle="bold"
+                                    android:textSize="14dp"/>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
 
             </LinearLayout>
