--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -154,7 +154,7 @@
                                 android:gravity="center_horizontal">
 
                                 <ImageView
-                                    android:id="@+id/star_button1"
+                                    android:id="@+id/see_comments_button"
                                     android:layout_width="25dp"
                                     android:layout_height="25dp"
                                     android:layout_marginTop="1dp"
@@ -210,8 +210,22 @@
                     </androidx.cardview.widget.CardView>
                 </androidx.cardview.widget.CardView>
 
-
             </LinearLayout>
+
+            <net.cachapa.expandablelayout.ExpandableLayout
+                android:id="@+id/expandable_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:el_duration="1000"
+                app:el_expanded="true"
+                app:el_parallax="0.5">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="PREV-iew comments" />
+
+            </net.cachapa.expandablelayout.ExpandableLayout>
 
             <!--TextView
                 android:id="@+id/user_comment"
