--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -217,13 +217,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:el_duration="1000"
-                app:el_expanded="true"
+                app:el_expanded="false"
                 app:el_parallax="0.5">
 
-                <TextView
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/sub_comments_recycler_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="PREV-iew comments" />
+                    android:layout_height="500dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="10dp" />
 
             </net.cachapa.expandablelayout.ExpandableLayout>
 
