--- a/app/src/main/res/layout/review_item_without_options.xml
+++ b/app/src/main/res/layout/review_item_without_options.xml
@@ -16,63 +16,74 @@
         layout="@layout/add_comment_item"
         android:layout_marginBottom="@dimen/margin_5dp"
         android:visibility="invisible"/-->
-
     <androidx.cardview.widget.CardView
-        android:id="@+id/reviewed_comment"
+        android:id="@+id/aux"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorDarkGrayCardBackground"
-        app:cardCornerRadius="8dp">
+        android:backgroundTint="@color/colorBlank"
+        app:cardCornerRadius="4dp">
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/reviewed_comment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginTop="2dp"
+            android:backgroundTint="@color/colorDarkGrayCardBackground"
+            app:cardCornerRadius="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_5dp"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profile_image"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/user1"
-                    app:civ_border_color="#FFF"
-                    app:civ_border_width="2dp" />
-
-                <TextView
-                    android:id="@+id/user_name"
-                    style="@style/TextAppearance.AppCompat.Title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="@dimen/margin_5dp"
-                    android:text="@string/example_text"
-                    android:textColor="@color/colorBlack"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <me.biubiubiu.justifytext.library.JustifyTextView
-                    android:id="@+id/user_comment"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_5dp"
-                    android:layout_marginBottom="@dimen/margin_5dp"
-                    android:text="@string/Lorem_ipsum"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="12sp" />
+                    android:layout_margin="@dimen/margin_5dp"
+                    android:orientation="horizontal">
 
-            </ScrollView>
-        </LinearLayout>
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/profile_image"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/user1"
+                        app:civ_border_color="#FFF"
+                        app:civ_border_width="2dp" />
 
+                    <TextView
+                        android:id="@+id/user_name"
+                        style="@style/TextAppearance.AppCompat.Title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="@dimen/margin_5dp"
+                        android:text="@string/example_text"
+                        android:textColor="@color/colorBlack"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <me.biubiubiu.justifytext.library.JustifyTextView
+                        android:id="@+id/user_comment"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin_5dp"
+                        android:layout_marginBottom="@dimen/margin_5dp"
+                        android:text="@string/Lorem_ipsum"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="12sp" />
+
+                </ScrollView>
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
