--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/bookIconImageView"
@@ -31,7 +31,7 @@
         android:text="@string/booki"
         android:textColor="@color/colorSplashText"
         android:textSize="25sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <ProgressBar
         android:id="@+id/loadingProgressBar"
@@ -49,9 +49,9 @@
         android:id="@+id/afterAnimationView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="140dp"
+        android:layout_marginEnd="20dp"
         android:orientation="vertical"
         android:visibility="gone">
 
@@ -60,10 +60,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
+            android:textAlignment="center"
             android:textColor="@color/colorBlank"
             android:textSize="25sp"
-            android:textStyle="bold"
-            android:textAlignment="center"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/readItTogetherTextView"
@@ -72,14 +72,13 @@
             android:layout_below="@+id/WelcomeTextView"
             android:layout_marginTop="10dp"
             android:text="@string/read_it_together"
-            android:textColor="@color/colorBlank"
             android:textAlignment="center"
+            android:textColor="@color/colorBlank"
             android:textSize="15sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/loginButton"
             android:layout_below="@+id/readItTogetherTextView"
             android:gravity="center"
             android:orientation="vertical">
@@ -94,71 +93,35 @@
                 android:textSize="18sp"
                 android:textStyle="bold"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/passwordEditText"
+            <!-- Facebook -->
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/login_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:hint="@string/password"
-                android:textColor="@color/colorTextView"
-                android:textColorHint="@color/colorTextView"
-                android:textSize="15sp" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="15dp" />
 
-            <FrameLayout
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:padding="5dp">
+                android:text="@string/or_text"
+                android:textColor="@color/colorBlank"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/sign_up"
-                    android:textColor="@color/colorTextView"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end|center_vertical"
-                    android:text="@string/forget_password"
-                    android:textColor="@color/colorTextView"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
-
-            </FrameLayout>
+            <!-- Google -->
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/logingoogle"
+                android:layout_width="match_parent"
+                android:layout_height="37dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="-7dp"
+                android:layout_marginEnd="-7dp"/>
 
         </LinearLayout>
-
-        <Button
-            android:id="@+id/loginButton"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_above="@+id/skipTextView"
-            android:layout_marginBottom="5dp"
-            android:background="@color/colorBackground"
-            android:text="@string/login"
-            android:textAllCaps="false"
-            android:textColor="@color/colorTextView"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/skipTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="10dp"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center"
-            android:padding="12dp"
-            android:text="@string/skip"
-            android:textColor="@color/colorTextView"
-            android:textSize="15sp" />
-
 
     </RelativeLayout>
 
