Add comment in sub comment layout improved

--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -107,13 +107,13 @@
 
                     </ScrollView>
 
-                    <TextView
+                    <!--EditText
                         android:id="@+id/textamen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Añade un comentario"
                         android:inputType="text"
-                        />
+                        />-->
 
 
                 </LinearLayout>
