--- a/app/src/main/res/layout/add_comment_layout.xml
+++ b/app/src/main/res/layout/add_comment_layout.xml
@@ -9,13 +9,7 @@
     android:layout_marginBottom="@dimen/margin_5dp"
     android:orientation="vertical">
 
-    <!--include
-        android:id="@+id/comment_item"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/add_comment_item"
-        android:layout_marginBottom="@dimen/margin_5dp"
-        android:visibility="invisible"/-->
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/reviewed_comment"
@@ -43,15 +37,60 @@
                     app:civ_border_color="#FFF"
                     app:civ_border_width="2dp" />
 
-                <TextView
-                    android:paddingStart="@dimen/margin_5dp"
-                    android:gravity="center_vertical"
-                    android:id="@+id/comment_box"
+                <androidx.cardview.widget.CardView
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:id="@+id/aux"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/add_comment"
-                    android:inputType="text"
-                    />
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/colorBlank"
+                    app:cardCornerRadius="4dp"
+                    android:layout_marginStart="2dp">
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/sub_comment"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="4dp"
+                        android:layout_marginStart="2dp"
+                        android:layout_marginEnd="2dp"
+                        android:layout_marginTop="2dp"
+                        android:backgroundTint="@color/colorDarkGrayCardBackground"
+                        app:cardCornerRadius="8dp">
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center_vertical">
+
+                                <ScrollView
+                                    android:id="@+id/scroll_view"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:foregroundGravity="center_vertical">
+
+                                    <TextView
+                                        android:foregroundGravity="center_vertical"
+                                        android:paddingStart="@dimen/margin_5dp"
+                                        android:gravity="center_vertical"
+                                        android:id="@+id/comment_box"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:hint="@string/add_comment"
+                                        />
+
+                                </ScrollView>
+
+                                <ImageView
+                                    android:layout_alignEnd="@+id/scroll_view"
+                                    android:id="@+id/send_button"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/send_message"/>
+
+                            </RelativeLayout>
+
+                    </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
