--- a/app/src/main/res/layout/add_comment_layout.xml
+++ b/app/src/main/res/layout/add_comment_layout.xml
@@ -58,6 +58,7 @@
                         app:cardCornerRadius="8dp">
 
                             <RelativeLayout
+                                android:id="@+id/relative_layout"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_gravity="center_vertical">
@@ -68,7 +69,7 @@
                                     android:layout_height="wrap_content"
                                     android:foregroundGravity="center_vertical">
 
-                                    <TextView
+                                    <!--TextView
                                         android:foregroundGravity="center_vertical"
                                         android:paddingStart="@dimen/margin_5dp"
                                         android:gravity="center_vertical"
@@ -76,7 +77,7 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:hint="@string/add_comment"
-                                        />
+                                        /-->
 
                                 </ScrollView>
 
