Create an achievements of the user and add in Firebase, solved some bugs about the login with the Google and Facebook accounts and improve a different aspects about the app

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,6 +22,7 @@
             android:background="@drawable/profile_banner">
 
             <ImageButton
+                android:id="@+id/buttonAchievementsProfile"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_alignParentEnd="true"
