Solved a different bugs about login and the user's picture

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -51,6 +51,7 @@
                         android:layout_height="match_parent"
                         android:layout_centerHorizontal="true"
                         android:src="@drawable/profile_photo"
+                        app:background="@color/colorBlank"
                         app:civ_border_color="#FFF"
                         app:civ_border_width="2dp" />
 
