Add a personalized search on the search book in the discover fragment and implement the search by users

--- a/app/src/main/res/layout/fragment_search_book.xml
+++ b/app/src/main/res/layout/fragment_search_book.xml
@@ -3,25 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:backgroundTint="@color/colorPrimaryDark"
     android:orientation="vertical"
     tools:actionBarNavMode="standard"
     tools:context=".SearchBookFragment">
-
-    <!--androidx.appcompat.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark">
-
-        <ImageView
-            android:id="@+id/go_back_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/ic_go_back_button"/>
-
-    </androidx.appcompat.widget.Toolbar-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,14 +44,26 @@
 
         </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/books_recycler_view"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="4dp"
+                android:minHeight="?attr/actionBarSize"
+                app:tabSelectedTextColor="@color/colorBlack"
+                app:tabTextColor="@color/colorMark"/>
+
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
